[package]
name = "nokeur-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
lettre = "0.10.1"
chrono = { version = "0.4.23", features = ["clock"] }
